Bug 139749 - 'Current word' dropdown not focused upon opening Thesaurus (GTK3)
Summary: 'Current word' dropdown not focused upon opening Thesaurus (GTK3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2 tar...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2021-01-18 17:09 UTC by renaudbussieres@gmail.com
Modified: 2022-12-29 12:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description renaudbussieres@gmail.com 2021-01-18 17:09:29 UTC
Description:
It would be great to be able to type immediately after opening the Thesaurus dialog window (either with keyboard shortcut, the menu or the icon). For now, I have to click in the textbox, and then type. That's a small, but still an inconvenience. Being able to type immediately would improve the workflow speed. As an example, the Search, and Search and Replace dialog windows have the main textbox in focus right at the beginning, which is convenient. Note than when a word is selected, it works fast and well to simply press Ctrl+F7, but sometimes I'm looking for a synonym without having any word selected (typing a word, backward selecting it (or selecting it using the mouse) and then pressing Ctrl+f7 seems a bit odd to me).

Steps to Reproduce:
1.Press Ctrl+F7 to open the thesaurus.
2.Start to type something.
3.

Actual Results:
Nothing happens.

Expected Results:
I would like to be able to to type right away and then press enter to launch the search.


Reproducible: Always


User Profile Reset: No



Additional Info:
No
Comment 1 Dieter 2021-02-02 08:03:32 UTC
I can't confirm it with

Version: 7.1.0.3 (x64) / LibreOffice Community
Build ID: f6099ecf3d29644b5008cc8f48f42f4a40986e4c
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: threaded
Comment 2 renaudbussieres@gmail.com 2021-02-02 13:59:00 UTC
Hello,thanks for your reply. I tested further. Here is what I found.

In LibreOffice Writer, if my cursor is anywhere in a paragraph, and I type Ctrl+F7, it opens the Thesaurus with the "Active word" being the word where my cursor is. Then I can use the Up and Down arrow on my keyboard, or the mouse, to select an alternative word. This works fine.

Now if I'm on a new line, a new paragraph block, and I press Ctrl+F7, since there is no "active word", there is nothing for the Thesaurus to look up yet. In that case, my point was that I was expecting to be able to type right away a query word, but since the focus is not automatically on the textbox where the "active word" usually is, I have to use to the mouse to click on the textbox, and then type.

Like I said previously, this is a minor workflow issue. You might think it is a rare case, but it happened to me a few times... I guess it comes from my understanding of the Thesaurus tool. I now understand that its primary intent is to lookup an "active" word, and it works well in that manner. I was looking at it more like a general thesaurus look up tool. Now, my point is that when there is no active word (the cursor being on a new line), it would be convenient to have the possibility to open the Thesaurus tool and type right away a query word, without having to click on the textbox.

I hope this is clear, English isn't my first language. Thanks again!
Comment 3 Dieter 2021-02-07 12:07:56 UTC
(In reply to renaudbussieres@gmail.com from comment #2)
> Now if I'm on a new line, a new paragraph block, and I press Ctrl+F7, since
> there is no "active word", there is nothing for the Thesaurus to look up
> yet.

I can't confirm that. If I'm in an empty paragraph and press CTRL+F7 I can start typing.

Could you please paste informations from Help => About LibreOffice?
Comment 4 renaudbussieres@gmail.com 2021-02-08 01:24:09 UTC
Hi, thanks for your patience. Here is the information pasted from Help -> About LibreOffice:

Version: 7.0.4.2
Build ID: 00(Build:2)
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: fr-CA (en_CA.UTF-8); Langue IHM : fr-FR
7.0.4-3
Calc: threaded
Comment 5 Dieter 2022-02-08 06:50:31 UTC
Hello Renaud, a new major release of LibreOffice is available since this bug was reported. Could you please try to reproduce it with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the bug is still present in the latest version.
Comment 6 renaudbussieres@gmail.com 2022-02-12 01:25:08 UTC
Hello, I have the latest version and it is still the same way. If I'm on a new line, and press Ctrl+F7, I cannot start to type right away, I have to click in the "Active word" text box, and then start typing. My understanding is that the Thesaurus function was meant to look up a word the cursor is currently on (or close to). But since we can also use the thesaurus function to look up a word we haven't typed yet, it would improve the workflow to not have to reach for the mouse and click the textbox.

For example, the Search (Ctrl+F) and Search and Replace (Ctrl+H) allow the user to type right away.

Here is my About LibreOffice info:

Version: 7.3.0.3 / LibreOffice Community
Build ID: 30(Build:3)
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: fr-CA (en_CA.UTF-8); UI: fr-FR
7.3.0-2
Calc: threaded
Comment 7 Dieter 2022-02-16 07:19:08 UTC
I still can't confirm the problem with

Version: 7.3.0.3 (x64) / LibreOffice Community
Build ID: 0f246aa12d0eee4a0f7adcefbf7c878fc2238db3
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Steps:
1. Open an new document or open an existing document and place cursor in empty paragraph
2. Press Ctrl+F7

Actual result:
Thesaurus opens and cursor is in field "current word" so you can type any word and alternatives are offered. (Expected result)
Comment 8 renaudbussieres@gmail.com 2022-02-16 14:18:52 UTC
Thanks for your answer. A hypothesis I can think of is that it might be an issue in the way our UI is rendered since that seems to be one of the only difference we have in our setup...
Comment 9 Buovjaga 2022-12-12 16:26:25 UTC
Repro with GTK3.

Bibisected with linux-64-6.3 to https://git.libreoffice.org/core/commit/de20969a5a0503d34078b675c23cb984e380337a
weld SvxThesaurusDialog
Comment 10 Commit Notification 2022-12-12 20:58:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d4a1d4b266a74a9adeaa84a8caab9b8b33dbb302

Resolves: tdf#139749 set initial focus to combobox

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2022-12-12 20:58:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/2390c63e311497892f56e7e16a213195098c87b4

Resolves: tdf#139749 set initial focus to combobox

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2022-12-12 21:00:01 UTC
done in trunk, backport to 7-4 in gerrit
Comment 13 Commit Notification 2022-12-12 21:17:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/36651d2b51f7db243d975cc2bf3bb8975b2faa10

Resolves: tdf#139749 set initial focus to combobox

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.