Resolves: tdf#139749 set initial focus to combobox

Change-Id: Ib8fd0dd4a4b5d4c137794c4538e61bfbf33b9a1d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144015
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>